Handling formulas in section titles.
When having formulas in the section title we get warnings like:
```
.../aa.md:3: warning: Found unknown command '\f
.../aa.md:3: warning: Found unknown command '\alpha
```
As formulas are not handled at all in section titles.
With this fix it is possible to have inline formulas and for formulas of type `\f[` and `\f{` we get warings like:
```
.../aa.md:7: warning: '\f[' command is not supported in section title
.../aa.md:18: warning: '\f{' command is not supported in section title
```

--- a/templates/latex/header.tex
+++ b/templates/latex/header.tex
@@ -168,7 +168,7 @@
 %%BEGIN PDF_HYPERLINKS
     % Hyperlinks (required, but should be loaded last)
     \ifpdf
-      \usepackage[pdftex,pagebackref=true]{hyperref}
+      \usepackage[pdftex,pagebackref=true,unicode,psdextra]{hyperref}
     \else
       \ifxetex
         \usepackage[pagebackref=true]{hyperref}
