Parameter names were shown at wrong place for function pointer types

--- a/templates/latex/doxygen.sty
+++ b/templates/latex/doxygen.sty
@@ -389,7 +389,7 @@
 
 % Used for parameters within a detailed function description
 \newenvironment{DoxyParamCaption}{%
-  \renewcommand{\item}[2][]{\\ \hspace*{2.0cm} ##1 {\em ##2}}% 
+  \renewcommand{\item}[3][]{\\ \hspace*{2.0cm} ##1 {\em ##2}##3}% 
 }{%
 }
 
